--- a/buildspec.yml
+++ b/buildspec.yml
@@ -11,7 +11,7 @@ phases:
   build:
     commands:
       - echo Building the React app...
-      - npm run build
+      - REACT_APP_API_URL=http://quickdigitizing-api.ap-south-1.elasticbeanstalk.com/ npm run build
 
 artifacts:
   files:
