--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "bootstrap": "^5.3.3",
     "concurrently": "^8.2.2",
     "dotenv": "^16.4.7",
+    "file-saver": "^2.0.5",
     "firebase": "^10.13.0",
     "html-react-parser": "^5.0.3",
+    "jszip": "^3.10.1",
     "jwt-decode": "^4.0.0",
     "klaw-sync": "^6.0.0",
     "mime-types": "^2.1.35",
